# pokebattleapi

./: README.md  main.py  pyproject.toml  requirements.txt
poke_data/: ApiToCsv.py
poke_data/data/: pokemonAll.csv
poke_data/v2/: poke_battle.py  poke_plot.py  poke_testing.py  relative_power.py  visualization.py
poke_data/v2/ML_models/: knn.py  neural_network.py  perceptron.py  perceptron_diff.py  rfc.py
poke_data_old/: ApiToCsv.py  pyproject.toml
poke_data_old/data/data/: pokemon.csv
poke_data_old/data/v2/: match.csv
poke_data_old/v2/: poke_battle.py  poke_plot.py  poke_testing.py  relative_power.py  visualization.py
poke_data_old/v2/ML_models/: knn.py  neural_network.py  perceptron.py  perceptron_diff.py  rfc.py
