[tool.poetry]
name = "pokefastapi"
version = "0.1.0"
description = ""
authors = ["Freddiiy <frederikgaller@live.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pandas = "^1.5.1"
requests = "^2.28.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
